[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "outline-vpn-api"
dynamic = ["version"]
description = "Python API wrapper for Outline VPN"
requires-python = ">= 3.10"

dependencies = [
    "requests==2.33.1",
    "packaging==26.0"
]

keywords = [
    "outline",
    "vpn",
    "api",
    "wrapper",
    "rest",
]

authors = [
    { name = "Jorge Alberto Díaz Orozco (Akiel)", email = "diazorozcoj@gmail.com" },
]

maintainers = [
    { name = "Jorge Alberto Díaz Orozco (Akiel)", email = "diazorozcoj@gmail.com" },
]

readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/jadolg/outline-vpn-api"
Issues = "https://github.com/jadolg/outline-vpn-api/issues"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false

[tool.black]

[tool.poetry]
version = "0.0.0"

[dependency-groups]
test = [
    "pytest (>=9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
